creating solver sample

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
 /routing-service/data
-/front-end/node_modules
+
 /orders-service/node_modules
-front-end/.eslintcache
+
+/front-end/node_modules
+/front-end/.eslintcache
+
+/routing-solver-service/target
+/routing-solver-service/.classpath
+/routing-solver-service/.project
+/routing-solver-service/.settings
+/routing-solver-service/dependency-reduced-pom.xml
