--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,10 @@
 version: "3.1"
 services:
-  front-end:
+  redis-service:
+    image: redis:rc-alpine3.12
+    ports: 
+      - 6379:6379
+  front-end-service:
     build: ./front-end
     ports: 
       - 3000:3000
@@ -8,6 +12,10 @@ services:
     build: ./orders-service
     ports:
       - 9000:9000
+  shipment-service:
+    build: ./shipment-service
+    ports:
+      - 9001:9001
   routing-solver-service:
     build: ./routing-solver-service
     ports:
