--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "orders-service",
+  "name": "api-gateway",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
     "ioredis": "^4.19.4",
     "moleculer": "^0.14.11",
-    "uuid": "^8.3.2"
+    "moleculer-web": "^0.9.1"
   }
 }
