--- a/shipment-service/package.json
+++ b/shipment-service/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "orders-service",
+  "name": "shipment-service",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
     "ioredis": "^4.19.4",
     "moleculer": "^0.14.11",
-    "moleculer-web": "^0.9.1",
     "uuid": "^8.3.2"
   }
 }
