configuring local vs docker execution

--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -2,5 +2,5 @@ FROM node:10.19.0-alpine3.11
 ADD ./ /source
 WORKDIR /source
 RUN "yarn"
-ENTRYPOINT [ "node", "index.js" ]
+ENTRYPOINT [ "yarn", "start" ]
 EXPOSE 9000
