--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "ioredis": "^4.19.4",
     "moleculer": "^0.14.11",
