--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     build: ./api-gateway
     ports: 
       - 9000:9000
+    env_file:
+      - docker-compose.env
   redis-service:
     image: redis:rc-alpine3.12
     ports: 
@@ -14,8 +16,12 @@ services:
       - 3000:3000
   orders-service:
     build: ./orders-service
+    env_file:
+      - docker-compose.env
   shipment-service:
     build: ./shipment-service
+    env_file:
+      - docker-compose.env
   routing-solver-service:
     build: ./routing-solver-service
     ports:
